# krakow-tram-lines

./: .gitignore  README.md  gsd.txt  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  todo_now.txt  tox.ini
.github/workflows/: docs.yml  pylint.yml  python-app.yml  test.yml
ToIgnore/: tramLines.pkl
data/: Tramwaje_dane_modeli.xlsx  Tramwaje_modele.xlsx  time_table.xlsx
docs/: database.sql
docs/source/: conf.py  index.rst  ktl.acquisition.osmnx.rst  ktl.acquisition.rst  ktl.acquisition.selenium.rst  ktl.acquisition.web.rst  ktl.aggregation.rst  ktl.model.rst  ktl.rst  ktl.visualisation.images.rst  ktl.visualisation.rst  modules.rst
docs/user_made/: relations.sql
res/: config.json
src/acquisition/: acquire_data.py  constants.py  data_saver.py
src/acquisition/osmnx/: constants.py  tram_stops.py  tram_tracks.py
src/acquisition/selenium/: browser_manager.py  constants.py  latency_data.py
src/acquisition/web/: constants.py  constraints.py  parser.py  scanner.py  tram_model_attributes_data.py  tram_models.py  tram_time_table.py
src/ktl/: __main__.py
src/ktl/acquisition/: __main__.py  acquire_data.py  config.py  constants.py  data_saver.py
src/ktl/acquisition/acquire/: info.py  receiver.py
src/ktl/acquisition/data/: package.py  saver.py  saver_info.py
src/ktl/acquisition/osmnx/: tram_stops.py  (+1 more)
src/ktl/aggregation/: __main__.py  aggregate_tracks.py  create_json_lines.py  time_table.xlsx  tram_stops.xlsx
src/ktl/model/: __main__.py  people.py  probability.py  simulate_people.py  stops.py
src/visualisation/images/: constraints.py  osmnx.py
src/webscrapper/: constraints.py  map_creator.py  webscrapper.py
tests/webscrapper/: test_map_creator.py
webscrapper/: helloword.py  webscrapper.py
(+55 files in other folders)
