[metadata]
name = ktl
version = 0.0.5
author = Robert Barcik, Dominik Breksa, Miłosz Góralczyk
description = Simulation of Krakow's Tram Lines
long_description = file: README.md
project_url = https://github.com/ForNeus57/krakow-tram-line
platforms = unix, linux, win32, win64
classifiers =
	Programming Language :: Python :: 3.12 :: Only

[options]
packages = find:
package_dir =
	=src
install_requires = file: requirements.txt
zip_safe = no

[options.packages.find]
where = src
include = ktl*
exclude = klt.tests*


[options.entry_points]
console_scripts =
	main = ktl.__main__:main


[options.extras_require]
testing = file: requirements_dev.txt

[flake8]
max-line-length = 120
statistics = True
count = True
max-complexity = 10
show-source = True